Update SBOX sops secrets

--- a/k8s/environments/sbox/common/secrets/kured-values.enc.yaml
+++ b/k8s/environments/sbox/common/secrets/kured-values.enc.yaml
@@ -1,11 +1,11 @@
-kind: ENC[AES256_GCM,data:lmWXjD5C,iv:C0TTpvZJx+wGdrdBGYAj9qN/8IKW0hkSeSvTL7hXUQk=,tag:8IH3UoHkCWz2TyNoRB3w8Q==,type:str]
-apiVersion: ENC[AES256_GCM,data:reQ=,iv:My980MdZstUPpni+IdFhqTiSE2IkEmS4eXeIGlpqJlY=,tag:gf2hIyEm/ddM4m76hFHcwQ==,type:str]
+kind: ENC[AES256_GCM,data:ivMjhajl,iv:lBIOuE9lOAxk0DAUiaU7J+cD3bz+eBx+T9hhfDDEeb4=,tag:njY1l461rRgqxztlYWwvQw==,type:str]
+apiVersion: ENC[AES256_GCM,data:a0Y=,iv:+JfaokQNdFPs58x6GpYH3JpvaGls/BKxxPzWMhFX3vQ=,tag:+QtoEcY3Ec7WcNbJ1nxNEA==,type:str]
 data:
-    values.yaml: ENC[AES256_GCM,data:SJMW2pjL3DJ2lFT/2L9B4ouSWEhUzxb/f2mMYDzAloWk1+NgvnDZRtavxwb2XKLlvjgLmb2mTt3Cz2txj0+OO3iYTpUr+tk+0308mAC8zqadMO/nvbWAlKMjDTmvYClSROnS4HxLGdsBg2f1QVunHPmctnCRnEBebrLMZ1N4uk6muaLTWmAHc0+iQu4=,iv:WvxEE4qimEavbg+YkqY6UjIsQKDZ/n+RXpvV8bZD+28=,tag:x4SFX6SWCsFKt9NeAE4AuA==,type:str]
-type: ENC[AES256_GCM,data:kmF8xlVS,iv:yV5ZXlS/mHgEDlTqy3+3RvuoODDqf0uEYLq8wGQKcBM=,tag:9EblTUS2eAi+QRU6J6v9zg==,type:str]
+    values.yaml: ENC[AES256_GCM,data:Mut3nSEv/SKuD2qWi1QP27etyzF60utoZHDOP5yv0lamQ4n/yYpYuvq0jMjIpQcREGC4i4+tCfQaj0hSc4EPR5tDWpDhHlKKVxbOm26n4mfz8hVUQeiU1KF2hi75lgU0tASJ9QyCdRVxr6h4VtJ3iZBCk+xMs7k08dm0WZSjGLdtSsXyFERPHHkb77s=,iv:Yhf/yXCQFJRzYReG4B5zrH4N6tOhnZhAL9j2OfxorS8=,tag:2Vws6L7Ld5Hx2Ew8za2FQg==,type:str]
+type: ENC[AES256_GCM,data:RJH31h6D,iv:HX+mTNztRcmUwOIMXmts/YH9VKQEIa3Q2UKzvRlyDcU=,tag:xqx0efDVdgjCpKVaDyqsMw==,type:str]
 metadata:
-    name: ENC[AES256_GCM,data:X4XUWhsvKnLGcUi1,iv:f8RCXC7Nm6YXmfzOq893aeHOlV62piXV4+bTZcd56LU=,tag:Qa0hcN2GFZs1HKWiBTpJWg==,type:str]
-    namespace: ENC[AES256_GCM,data:cp+Kv8s=,iv:crtHggJJHh79dqsLwquDAMwc/honoVKcYDRTiJMYYKw=,tag:ZGkhflyJZzRuisC0SDp/2Q==,type:str]
+    name: ENC[AES256_GCM,data:3HUiUGDGRkpNOUd8,iv:QkYO1J7MqqvgS9kh9EkGmvQEpJCIODVX0ILfoFlrkAw=,tag:OVO+mpga8tym9M63Oue/uQ==,type:str]
+    namespace: ENC[AES256_GCM,data:lsIGo/Q=,iv:8OQZLVO2NPh1X3PvK/6LD2aEW3kj8jsf6PLXc1zvPVg=,tag:Vk0yuJ+TbGwDpToZLuceqA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -13,11 +13,11 @@ sops:
     -   vault_url: https://dtssharedservicessboxkv.vault.azure.net
         name: sops-key
         version: 743d27d4b20644a6bd1936f3e55d1db3
-        created_at: '2020-10-16T14:47:37Z'
-        enc: D8gN_x6PBQ99bckZAxT1s4EjiqJ5VaP_RgocAjYZHRJGkOT_HkU2cqo4-lj2HJQqJfd8uyiE9GbYlmhs6qYOul1O4vpaj9-r-QVnDv3PJY6Sz38joFiTpNf2vpDx3ZIqUokefOOE9QdzbKcYs1r9hMlc8YdOD62JoBEHW-RghGZDvvRUzdW8E4V7n01g18L9wg54MJSJ0MFbqRsOaarytvIY-aI4OXaGwBM23J_YvcDmSQ0LNasg1UuIhKcjUfNcwCeUlhtRxXhFCNK_TjEB183e1VveUOzKifyWni_kbvMdtoIOPB2wbeeYEsu8iEl29Nr_XIPXNQ3Ag4UMjqYhUg
+        created_at: '2020-10-16T16:21:02Z'
+        enc: hyhfzHb9tLUnvfVuptIYRz2hesD2LVBUk_g3YSEGDgIR46fHmBwLRlJLH4NqhDxEtI5ZSe7hP-hh6f3a_GuF3jYbtd9UovsVc-dOf8ZaKsfvnaXF31_VpFLz9zVGqTABwGm0cdFQI8LaPTPqJAwl6BeoqHxyl6BFok2tkXzGptrNAyalv32Ak5ow4eM8wjE1OzjdUb_O6d65c-dTBnZ95P1ruYbxnGtmtvD6UtGSk1zEbAznb1tlPqcU7NP2t6nc27OBNa35jwOGuqMgc8B-WF6KTw3bI4OEEaxw2uC4xepgwHv5J4tty-Mai17674-qPYJEh8jdlnA9GPqQctiHlA
     hc_vault: []
-    lastmodified: '2020-10-16T14:47:39Z'
-    mac: ENC[AES256_GCM,data:zr8WbcnAkPI1E+dN+wTz/15r7Rm3Uz83djusceAyiVqBawxf5wIHg5BKHVJiqQRVyftsWdaZ4h0vvOCaLtY6112fZWIcxVeIR9MiTuhxDz3cBK7HLK3nvdDVU4/BZGez+/jHKe8Li8jpuNipsQhpfxCQLWPozedezvT1tgvglJY=,iv:KFglldXc7+3jkzrC2J4VBa+LQ0mLx647w+7ze1fqcmg=,tag:+0YPw+t/uzvo6FslflClhQ==,type:str]
+    lastmodified: '2020-10-16T16:21:03Z'
+    mac: ENC[AES256_GCM,data:bYyihoLuLZqZMMlT+XEaaR3TxJI6XwEzOAG9L787N6HGc470redm6orytRDQNh5xLRVA/rj9+bZlwak76JzMXPrHEA4A6nS73XNyrXOcJXT+Ay0nBeXJLg3H3FRHGsMfHGZD2IpE5D2dLZLK2ddDj7Aqc0RF9cYeDoIIkuQ26qk=,iv:3kZrrezka+ZdvbRyyi1fdiEZviDtjRG5KqoyzAuC7nI=,tag:qgdp7V7wJrRWcT87yYxNXA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.6.1
