--- a/k8s/environments/sbox/common/secrets/kube-slack-values.enc.yaml
+++ b/k8s/environments/sbox/common/secrets/kube-slack-values.enc.yaml
@@ -1,11 +1,11 @@
-apiVersion: ENC[AES256_GCM,data:2sI=,iv:DovgxXsGIcCCQmaozojeM9lgG0H2yP7ujIvJs+FgqnI=,tag:jpEnDHnaGRcACcpuqJJHyw==,type:str]
+apiVersion: ENC[AES256_GCM,data:B+0=,iv:cjCJCjW+mdrMeA84pSTNY6LHyhnLmWCU9bEYGep0OD8=,tag:o2cDstvF/84gScFFsAD0Og==,type:str]
 data:
-    values.yaml: ENC[AES256_GCM,data:mXXJubXArwZQe5corr+WE9ROPq7TGQpbkYmZnbhR/wHll0jXTnZKzTMIjBRi10V4SUUHOHi8scZz8PDDW7mjz5vsyLpgeQ2ZQsbWRvhJWAw6vlv+pzRjW3UAUzq0QX+eL4sTl9UQoVOSzlqB9Df0KYH1INkxXFHQjQYbCEqWdkwEhvkA,iv:JIpSj0czZyjq88jv7qilyv/IQykYuw/mjigsSzAQvoo=,tag:eU65D73gb/YEMmDqO9j3tA==,type:str]
-kind: ENC[AES256_GCM,data:yrzq50XR,iv:h8IlSHSsZWCwide0RsJhDggLUBHNQW3LCcC5sVFTC6U=,tag:5SHpsBUTxCXb49XQejA0ug==,type:str]
+    values.yaml: ENC[AES256_GCM,data:ezJoObkSjsVpRNnJy/ULZqO1g87LIa7ky6YocXJpqAUzuSwyEPRuPOTgW8CSfu6yCaCVk3xMtXzYqKW8XQOjJJYlWTQt/KHW1bDahkfkLDs/g7UPpIqboqKWQjhyJpoDKEW1+Z/GhbMgPxlVfUc/ENSIMDGc/cbvS/kOgHpGojAdR609,iv:v+24l4gwB+BG8sXQQEFaffGg9841Pfh5DLlKuRq4oGs=,tag:2tM2+oZKmLtjg0SS4prDsQ==,type:str]
+kind: ENC[AES256_GCM,data:rcIXOTVe,iv:3/7Td1CkQJjmUvYpZkAQBXtxS0shiWPqvroY1Fw3mRQ=,tag:SE8p9IVZf9ve+fbGM6WifQ==,type:str]
 metadata:
     creationTimestamp: null
-    name: ENC[AES256_GCM,data:atq/PCnHLIB9ke7Twr4N/I4=,iv:SpfBLy6ONBrGDtLkGsyVuCZPbHmA1D4LcNWqidGXhPg=,tag:5NoA/hU+eSbn6VT+cGnR5Q==,type:str]
-    namespace: ENC[AES256_GCM,data:D39Gs3o=,iv:d8YyBaVCU0V4d8J3rPeOYnpyTM+lK1Q3pKxmrvZ3m/0=,tag:Omhlo1hcLHcMgyUGUzhFdg==,type:str]
+    name: ENC[AES256_GCM,data:k+yHMNqBCYGMwmw8YJQp46I=,iv:BCADrdYcykw02NPtK//WqceIS0TQqSJGm9dbS1OoscY=,tag:F40QWcr/K5Rp9qOUPcPxKg==,type:str]
+    namespace: ENC[AES256_GCM,data:Fd4rh8o=,iv:3R7TVlrxXJGBJUjzArINjvN3Rdoc69bGmXq9Sio5JKU=,tag:LK0UKIwB7NoeBd1YF45Bqw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -13,11 +13,11 @@ sops:
     -   vault_url: https://dtssharedservicessboxkv.vault.azure.net
         name: sops-key
         version: 743d27d4b20644a6bd1936f3e55d1db3
-        created_at: '2020-10-16T14:47:39Z'
-        enc: maFoirNKkpJyjNGitntDcsNsxLpUYxcuGuRAmv9SpL_kbdSNpn9QMJahus2vO_GjN5yF20Ma2V38jDSWeXwXL9duFF6gid9WZT3a_KapGmXObcnFqNSS0nD-ONPAy71EpGPqwvSlDSRUBegQORPC1Hju3g7YaB2YKnVUMqnDeItjSO3pkrQMhQIjzJRSPOkvImvYXJ3TEABbrTjucbTa4SrU59bBYU_VpIWPcoEXrFwXTG1gVZeKlAt_XPtMPAKIgSBD0o17DXwEOeQ4X7sw1LIThzPBjY_2Q5bu3J_7NzrWqsgoBFZbuQD-RIvcuWjDWDhPEJXvkHOCnw4vTQgzRQ
+        created_at: '2020-10-16T16:21:51Z'
+        enc: Qg64PY6NHnJNH4mXVgBjH7BWjKhMcN3EWEqBnX5U8uEgjcAKEEH3Ky6WRl8ZLYOcE6a3Dwfn-ED-is9W-nxsqYC0gzqe_L_d8VV4UN2W_3MU2Nw7bbpkaDZEtJhDZyUrlGxNCugCq8RF7hqiiVeg-pQ2fI3_AU47OLCdujy_Jk5hfGdezssphGyaUXZE97S2pd3x6tVDZmwSoeTwUS4-BedzM9HUDJ742MPkbTEEeDUy9q8bXimQt_4KXYXLn_Fsy0YjF6giZFeENTJzIx2yFA-yCFZlj5Gk7Z6bfr0zBhPw6kTQSgM7RRrFADsbaS_wpamWwLCem-00Q99W_o_WoQ
     hc_vault: []
-    lastmodified: '2020-10-16T14:47:40Z'
-    mac: ENC[AES256_GCM,data:HQnk1MnAa2bKHu3zM/a0oz8Z7OCPRbqijgFiD40vJWqKg57Xx7UYOOXqqtIsfmmia/BSV82FAbtpHbBuWj0COsXi+EXWkAGyrEJINvWPXro1M6leNz1YZsz9LDJ3f1kaqPwkcIpIx2FmZb2yTl31+py699Xwoh5OGy0griM3crM=,iv:hU4D+VChSIbmIZxEqDhS2cmruNZRF9nvdMcYOKgGrS8=,tag:yOq9AdY18fDAc8xL3s1Hkw==,type:str]
+    lastmodified: '2020-10-16T16:21:52Z'
+    mac: ENC[AES256_GCM,data:XGRwE2a9Zj+hL3Ce14rb2OFaE+JRiboJDwM8JWELxuvmjvTEBFMxbvnqq7q0gNjDULogaHNU/tmnxMNrRxhs1d+yM9TWPjvCduLbQuX9XlKS4DZtZ4FWMpCJ/triv5CmESPj69nUSzOW5ppjrO69nyWaMASSlbMdrwbICzYXEHc=,iv:ng2tjS2LVGF/WGnfmcqlN40hDOktV4k93nh1oQaVswg=,tag:7OBsm/ekRGp2nMu7Mjk3fw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.6.1
