--- a/k8s/environments/sbox/common/docmosis/docmosis-secrets.yaml
+++ b/k8s/environments/sbox/common/docmosis/docmosis-secrets.yaml
@@ -1,24 +1,25 @@
-apiVersion: ENC[AES256_GCM,data:1L8=,iv:Rm2NHTnplQl32JdjGMp2cjcf8THrMu7GTEfaZyjO4D8=,tag:vfxn5MPszI2jFUr9IJn75Q==,type:str]
-kind: ENC[AES256_GCM,data:BFlxhfG3,iv:o97Tu8dVTRLfNY+sNIvwn0xnjayTrJvVdBV7SRt3oPk=,tag:iMuHxidfRSzI3plxE8PGog==,type:str]
+apiVersion: ENC[AES256_GCM,data:apQ=,iv:dKJG+CWWYne1KUXrAwsvlkfVaY3EkYDhGX7uLQlqrsM=,tag:ec+cHPeLT2orIBachYHtkA==,type:str]
+kind: ENC[AES256_GCM,data:EDv/9TgO,iv:aJr07V3mj2FA3WAKESI2Lp5KKcB645JcNoGQJ78Wc4I=,tag:jIOKwSgSkUnotqMuS5J1ZA==,type:str]
 metadata:
-    name: ENC[AES256_GCM,data:9poBZhQUsa8=,iv:PIT08cI4Ie9HSY3t0nkB2M2ST+FAtiAtFWVSolzyGAc=,tag:v5NKnYxdaHUPQo9rmNgT4Q==,type:str]
-    namespace: ENC[AES256_GCM,data:9b6q2b+cpXE=,iv:2gjVtNjPGJfvFyBJsNz9OIKY8bY3UdHI/ao3jyUzU2Q=,tag:d0yOuy4Id3eXi6aSJIo5aw==,type:str]
-type: ENC[AES256_GCM,data:15+YSIyf,iv:QgXL225g3iA6v4Xye95Jw4URqjd38vLlEw1Qb4jZyeo=,tag:FUvIRA12LS7cz4T/agl1vw==,type:str]
+    name: ENC[AES256_GCM,data:PA8BAOyJsL0=,iv:JHdkn1O/BKT1zA0w6sYKeWQ6DnrsJZQn/cXxQxxD/30=,tag:C29KbkxLu/JOCT6MrckQRw==,type:str]
+    namespace: ENC[AES256_GCM,data:AgiDXRDL8Rk=,iv:Uab8WzFFRd3MIAw/ZVDSGwSoG5E+oc6eW1iBjKupqbg=,tag:VplSJeeWOCAwnZERV/kQUA==,type:str]
+type: ENC[AES256_GCM,data:NrwADC0z,iv:iyc7Z7+x1JGziX6QfBaFGufwF8kVSkg7zvEXM9vxHhk=,tag:2ec1rDN9yeiUvw6zg9+LTA==,type:str]
 data:
-    docmosisAdminToken: ENC[AES256_GCM,data:EAROOdIZKeW9QvBY8GagDB9CLJE=,iv:dtX3Pu4K/1WtHnq7XEulW4JzFwyuvTGm2n8eNOTli+c=,tag:bNl8UNUFEkLMqjnoCxtO0Q==,type:str]
-    docmosisAPIToken: ENC[AES256_GCM,data:Cwqt2mP5/0W4Rskzf+NVJX0FpV4=,iv:Y1N0osKoGu7t6EVaOed1qiUATFZGq9f4OSMGFNZJ+Bw=,tag:B48JpIgcnLwx1HjbKkkO6Q==,type:str]
-    docmosisLicenseKey: ENC[AES256_GCM,data:2Ot4GFoZ8vSfE3BJFWt6uktFM7/gOIk9x8/ADowUrcxFZCsSM5vknAfYsycDeIdno4OQ2rO52IlycOIILATdS1H/GZ0wHF0W,iv:lNjZifNOTSB9dJegvPtJvxP7fS4BhxdtHarlyXH1YMw=,tag:3Q2P8FqYoBtwbFNk98VXaQ==,type:str]
+    docmosisAdminToken: ENC[AES256_GCM,data:Ky7Z3b820HfZUh7MzJoTRkSNSGo=,iv:+L213z2VaFD3+1DDUm2ilzVmWlGxJAWu6SQsnALtnC0=,tag:1vhkMrtOMTFqnj88S0LRvw==,type:str]
+    docmosisAPIToken: ENC[AES256_GCM,data:WbaUW6hXpCneQS27H4RFu4XzhX4=,iv:hrjARQtLm8VKyjifox4LpD0dHdgE3XbMQRj6J86nU24=,tag:DDpxJylQSaAAm/ihqteyCg==,type:str]
+    docmosisLicenseKey: ENC[AES256_GCM,data:clTQd8h0aHxtgQWvL9GA6Der+BV/XlgUxT4MLgv5dLhAE9BO+q2qmwQ2QZVbFdJQJgx/YowoofyrvXVuXLIl/9tJCYRr34wr,iv:Rl0YXVHaSO5IFKlDxZvTjQg5Ywu3FNsSWidrruvDBiI=,tag:YLexyqBhG3MLX++/L59PGw==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv:
     -   vault_url: https://dtssharedservicessboxkv.vault.azure.net
         name: sops-key
-        version: 8d3eafdc8ece4cf59030ef2dd0a2698d
-        created_at: '2020-09-09T11:11:02Z'
-        enc: aA66RT2pfBGx4RITE_5J9uDAUFzyr_Zje5tbIrJbL1qvvt831RkqenOGaAlNTLt7kBWwoEWbkXkDw04WAC4UxCsihaoRHeAxx-avw9uqVcfljfCUTTHvINlFTW6jsluCaUewXS-2tMJdyKHqRv53pgmyaNDAx4HuqGCmBdG0vrCEfjHVnZoSl9C7XwGHthj3Ju8KOFJcKeLl6S2pnyV7ekl-BFcXLYMCuFtwGMWqCgnuvVgd69qUNfKlU4ptbtKi6Amt9NgW9KYQ_uKNWfURZEuFuASn5r64v_0Nh40L53kt5dulKZGf1SQoGEucNCfXTrICCx7TNIj0HVfv9Lptww
-    lastmodified: '2020-09-09T11:11:04Z'
-    mac: ENC[AES256_GCM,data:/cEEWx3FPtaKHnxWRA3Tyw266FHu4Du0kEdkRLr3oDLbbWqc++CEMUC/fV80qwj5Ag/6q+h2SCfJNsos4GoKQketfiAzhBR82tt+Kj9F3geE4G53WTMGeWqNeEEDVHWHZkClRossQd39wXXoq0cJfvAXg99s12LNwTE0wl26S48=,iv:SwphHs+NRUtpyZCTTZXc55j8x3B3tVw4jG/gMMsYSu0=,tag:nM/wI3zc0WW5sALoRmRksg==,type:str]
+        version: 743d27d4b20644a6bd1936f3e55d1db3
+        created_at: '2020-10-16T16:26:13Z'
+        enc: nWKMvhQ9iFn6EcDkOVeyx1nSJC-5w0GMcwq_yZZtTqMYnB0ozp7qhLYh_ckcgNiqVho68ZbQJtn75t6BF_BXhwPOGBM4AUBEyvZBpdRV8aAEgAnzeUwguYksgZQZgAb6GAb4yNIqvrpKYOwaUv-LrZRDT2_RvvzvZRz1eivCKCs4Ok19vw7zNA8H0wkKIBgIEakAJDl0x52pcb6mtPgQKaBHV3Bk5_Jq0GSdWtHvxg6bQzh1TWErLyXnfB26Yk65N--v9AKcj9G9gTmIclmoOHbecs0ZynqzhR_Pp9b-2Ba3m1UJanQfA_CNcRpqPEF6x0e8WLAYjWsSO_fHvGCEJg
+    hc_vault: []
+    lastmodified: '2020-10-16T16:26:14Z'
+    mac: ENC[AES256_GCM,data:wC8FOX0ej05iHBXKKjwYKZSODf+oJax300uCPzLsnQ19HDrlMjrDChpgwBj8mTpZsa8efqgcE20ClFyhu1MNs1/kvOMzs+fvR6evPr3yxYmoZXOq5tXic3yJXQZpfwgy4FUF1Fo5QnZlrsdQ2DZ2aljYAjJ44pxKXbYkl+zCpec=,iv:/EkBcUf+BxuFMBFROaXfdOK3zjZqMpzUvJb3HOQyrhY=,tag:+5ZKwbONdV1Mv4a/A64g6A==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
-    version: 3.5.0
+    version: 3.6.1
