Updating TEST secrets

--- a/k8s/environments/test/common/secrets/kube-slack-values.enc.yaml
+++ b/k8s/environments/test/common/secrets/kube-slack-values.enc.yaml
@@ -1,21 +1,23 @@
-apiVersion: ENC[AES256_GCM,data:Jg4=,iv:fZgURaXd5Dc0ZMNlfL9HdEbHEAVWUpnaJSX9cM7M0hs=,tag:Yx1W6pcDVppFlcYICEqOWQ==,type:str]
+apiVersion: ENC[AES256_GCM,data:lt8=,iv:GU6ojAe3RwYbh8QuM2whwf/0lDEc0AxRbcpMnk7mMnc=,tag:5izqtAhLiANmajuqHFoKjw==,type:str]
 data:
-    values.yaml: ENC[AES256_GCM,data:fgJfkbeS9Eyk2s6Kc/3WrC3KtozWwXtJBhOL2/TNw6nLv/TYcXBLTvqo4mJuxAmmHNvBWdqZTfw76QYVritWigPxOov4nCKNMZz16Qjw2N/PW3w7Z3T34wSDIPEBFD3S5Oc/9HdhrrCGhGgJG6atTkUIidIR64S8XhF3mxXp4+5Oqs0s,iv:62D9j8fVmV5QvIg81cxuXFDRrtVJTPbyCILOz6zGJQ4=,tag:EI/DQP/ec6VAYtQLIWgA3A==,type:str]
-kind: ENC[AES256_GCM,data:dY+xstzM,iv:EwbWuGvINMJLrkJjNzxffcadb4YGxh2RFypCgvsIoeg=,tag:yt+mRB+1/9Exmx6cpMLjdw==,type:str]
+    values.yaml: ENC[AES256_GCM,data:Vlf3vVgUQ/t00lGOtoamaUY+vY5a2Lbw8Il9KXWoVXqedPNPL7yVeGOM0wI275IzJtg1aipjfUt6yb+U25Hju6hc6ovLcXEMI8bBcyHPsmQj3D9AGc1MQk9C1M55cFKud3e0fZ/ZFytj4ORUv56ZZuT1o7hWtzUwAjztnranLvl5p+e2,iv:yEFAbqg7k6JEjocYgXpDcd6bDRAE0//epkr5BEz+XPE=,tag:BcowxbTyGuA8RqeA1meeJQ==,type:str]
+kind: ENC[AES256_GCM,data:Cpd9Zdhb,iv:OG8eWCWc6Dp6E3dXqJjOKaWecb0M3eiH+bSewlF5pXY=,tag:qwRQ4b1ykLR+92N0DUffbg==,type:str]
 metadata:
-    name: ENC[AES256_GCM,data:GikKBDB8mo3ADLggWa0sHUw=,iv:76wXW13w9iah+1Zcz0DFp9p35uq+z52BP9qO24tLJNM=,tag:wG3ROZCgAqMBU/bK1LrBJw==,type:str]
-    namespace: ENC[AES256_GCM,data:68s/ZAM=,iv:P0kSyEhcvs7N/x+XDDgOIdU/HmDJoJ9avVHmySIc+nY=,tag:VSyER/eBNZ330VwoGeOP4g==,type:str]
+    creationTimestamp: null
+    name: ENC[AES256_GCM,data:Fsr/jMiAGfWkup2PJftUusA=,iv:O7eSpCXhReFJX5Yo3oRUnV1UDwl7Xam4/FyiwHGeMQ0=,tag:AvGgBogmQDvWrZlQL855Jg==,type:str]
+    namespace: ENC[AES256_GCM,data:FGoaH8A=,iv:L9p4tSBNN7YayYqET3J8VmSAsEtComhhxMO5VNPt6QY=,tag:Rz9qhnZ8eVIPzViMzvcH8g==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv:
     -   vault_url: https://dtssharedservicestestkv.vault.azure.net
         name: sops-key
-        version: d6517bf87c76473b8fbc7e6f4c6e0c4a
-        created_at: '2020-09-02T16:36:51Z'
-        enc: enNNW8pCNSXkAcfgXobm8SWor4wp9nItRtTUouyIet4oGuPVw32JuyhZEGMNG9goaRTKj_XSuXNEsBiRFZxJ_n6u_Ani7xuyzhN-SojLzq5LACG0ROfPhJM1RkYy0I7l7zx6Q-EEjWDfrAPU6BCDHHRIJi9pnMhng4CnGRkq5YAKS1t0tIEUh1XdUmh4CJm6JwUs4SlRDxeSXrZo8bnxNNxqjtt-fBqzbhKxeiM5cTXVLCYb8jS-EBTGIuCm80KEOoiRfWDQkz2h0uqkOpDFD9ubx8B1P26JdQ4pUenmnOGFdg0cWufyLtQLoWHsgXkfk_6gCt8XkrsPLgp5T7QFXA
-    lastmodified: '2020-09-02T16:36:54Z'
-    mac: ENC[AES256_GCM,data:F7pWD4sOlVYPr1zAH/kBhejQ2Bk0u3OR8Vq6PdhCMt0ZRCzN+wLyQPHMt76Q+E7qRh7Lk6TaAkw31NvXOch0GaAkFQHaaE+gCl1+xAnpwOQFCqGTnr3ZVc7hkkcA8Q1SPdl2HAzwErh6hCMDhwhv+EoNx0yfICOhDY+KsR5Ac5U=,iv:Q0T2uwlJePFvqf6YCecneX33f5Px3iPlQLR+rYWGXZ4=,tag:7SumbbRJSlTc2V3f5Az9+w==,type:str]
+        version: 6d094e08ab7240ea8a64ec77f7f734b7
+        created_at: '2020-10-16T17:14:47Z'
+        enc: fboGY8OzYWqcRHUtli_s4eK4mJRMEqLyZAcj1JxItPzKp1XWSDtRxBLyd7yamJWopswJFEk8rm-JGZTGpFKUA8jr2VNUxaqqXmriqj8eU2jXLp2MthBedpqsLIhg_nF75d9DMeevtMfA9LStVwFWF79y3a79az4q9PXmi3V65Q1nm9IPQGlhJ17VtY74wsV-taM6A-kDasKwjLPR_BfzpLw97FMkeY6KNzQx3xrBsgJcZu1SubDPSn2fwcaJPImFngRtOo6cEzazgnxjj5y9MIibWa3StZ0DB1hbDp0Oq7gypAlOjh0m2A9Bd_zk1LtyvTcVYmVjycBf6I4vBh_oZQ
+    hc_vault: []
+    lastmodified: '2020-10-16T17:14:48Z'
+    mac: ENC[AES256_GCM,data:EHCb9obzKYdTmcTUgH5jSDHake218rmBGinwYlk6D3DTNjidjwQtJZBOdVO7+UWVnKHy2Q6tG+TWYXt4zZ6PjwAS374hjrwQf9hHW23QsQsuDFDKFron8Rp1ei3+IMSOqSSRVV1fO785tzrgFcUfKxWZ3q9Izh28Svat4YXsiwc=,iv:vS5C6rpoGH6wqZLnQKluGlTXJFXGoL/UJl+HAjr3ZK0=,tag:yE1zOsv/sxVCIpV1onM0eA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
-    version: 3.5.0
+    version: 3.6.1
