--- a/k8s/environments/test/common/secrets/kured-values.enc.yaml
+++ b/k8s/environments/test/common/secrets/kured-values.enc.yaml
@@ -1,22 +1,23 @@
-kind: ENC[AES256_GCM,data:/IpSriZx,iv:PrGoa4qcK7DTAuauCfXr2Hl/qox1UQYEHpsfswOcQxI=,tag:R59OcCUEHCyjcQgSTIvTSg==,type:str]
-apiVersion: ENC[AES256_GCM,data:5aM=,iv:zx+pGTJOH2i6pcBSKps0AVMMhpEaBig64ek/zXNGwTM=,tag:0JtdXkIH97ff6i02rzGLpw==,type:str]
+kind: ENC[AES256_GCM,data:ToAsRxyo,iv:EaN9Y2QPdad1JfjuV86/fx/fukHCS3/gWBzlUKzRIp8=,tag:SRSpvr/CSL1WnwMuQXYjeQ==,type:str]
+apiVersion: ENC[AES256_GCM,data:JAk=,iv:h+yzTNJKhFjO5PrMKBMCyQO3tw+O2Y0gcJlcNSVo5Lc=,tag:S17ig7mzL++1uEGNSzsE0A==,type:str]
 data:
-    values.yaml: ENC[AES256_GCM,data:R0NXXRQ35PIH2DUckDJ5TVh2a0xo0VR16iJ0duqkVC908BneJFQP/nNk28Wo9Msz2cUV4w56UTJtTULYeT7A+pmAf1CdX/67qG/4G5KiNoQ6BOkZiiUtockiqx7cWdcNZFRFTkioeFmnakm3f1dna1gBTkL8AAtEHEMuJ0IWI5RSA95tto9Ko57/1W0=,iv:fzDkCRL46nFI5sgH2vNebBpyO+tDZRLB/gMoe4DVkIc=,tag:H8zyOMMpyLIIdnncsEpIvQ==,type:str]
-type: ENC[AES256_GCM,data:OCWqKt+U,iv:qrbmn3mHIomrq1/VjICjC4TiViFgI0zA745YQ6FH1nM=,tag:FVpRR3jptCDj6YE5iduqEw==,type:str]
+    values.yaml: ENC[AES256_GCM,data:IGKASwM0wK6/7Qa6+f2hUQkKVLJPgdGQTWBReVnxjsAt1gBozPsn2pZC76iLLQobLbKr+tkjLxLY3OlPtSs1NaAsPqvDOQhaP/2biFzrc0QErKTmNNIfkrfI8u84DPiy7ygljidTGfBJXB3c1A79vSSY/EeBDeak1BhPInwmQv0XOjTz++vw/Vz2J5w=,iv:nA7jxib1CgupgqJ2tChgE76cH7eHLhdgIFbbrPF/9l8=,tag:aIE3vWrU0V3huxyJ3pYkPg==,type:str]
+type: ENC[AES256_GCM,data:vVVW2ZAk,iv:bqyaaLzNLs+a5lnkAAoHnppezxFT9WqXwIIDZLJ1lCQ=,tag:hgiq1FocayVcotS+9pDEbA==,type:str]
 metadata:
-    name: ENC[AES256_GCM,data:T41RUUpZ43b6N4IQ,iv:Vy7A1Nr0nGz2DM3poC1+mGw84MqH7xEbKoMqpYKgnZ8=,tag:IrhVIa4dEs7UgCuSxxr9Hw==,type:str]
-    namespace: ENC[AES256_GCM,data:jLJidyA=,iv:xKDldmZ1dmeEz9BsV9/kBBn/e6TmXO+0KoWU+OGRCyw=,tag:yOPJGA3InfgJtVct6XpqHA==,type:str]
+    name: ENC[AES256_GCM,data:XGej2NEFew905lEo,iv:Vk8NNgZoipK+//hSSx2UmXYToPcJnGyPJiNDjjWwxrw=,tag:IxH0usfXTKK+1BOG0fHY9Q==,type:str]
+    namespace: ENC[AES256_GCM,data:1b0HVP0=,iv:QL812gHb2Y7PLt4XLOpZbcELYBl0DE9YzSV1T+CHMZk=,tag:tJNEZf6IRGZydf6i1d7Vig==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv:
     -   vault_url: https://dtssharedservicestestkv.vault.azure.net
         name: sops-key
-        version: d6517bf87c76473b8fbc7e6f4c6e0c4a
-        created_at: '2020-09-02T16:39:38Z'
-        enc: FW0bEDLxRD-a8H8xIb6Ss1XAachhQSXDj53xuKc1FD-tkz0pujqsjcqQcJE8G5gsygR0OSJvUiSa0wcNj07DDVow9Ywkz9Z7bjglkPL5XvYSTl-yKr5m-JK1uAP-p5iw2cwAVuqurMG0qOu1Iwq4GGhjH337cfytfNWRPsoGviWzkYmWUmsWoWKuq98QX1bjrT0UO1GAAtoq4Ea_DaLCBfvcOCQ-wbtmVuXvXRJtKdhwLFmj4PSg7pm-TaiWWa0_ijgUnmvR77b7JCOLeVrXWeSIAWC4Z95hO0bVeYPHTPwd8gUqQit8NIWp7bw5Fhe8hyhQZ3gweG71JaAT4rXSzg
-    lastmodified: '2020-09-02T16:39:40Z'
-    mac: ENC[AES256_GCM,data:J54yXAJCLm9i7HZz32g65zVpBm+K7S5oejQa2WTUhNWLYquTuiIt0erf+G5W63SrIPd3WgzgITrdNbq90h/Ol5m/kKcWadI9qjJaH7y8tYst8yE+hsFnkwScWDdrzwvQ5AS39r7ko0xBk08R4oLurhWR4dEFVyo2B6GOi/upeHo=,iv:akvsloKouDnG5eT8nUI/Ln8ru5mxqwX7fEC50tZNy40=,tag:+jK9blvzzQtDVbvozHYYMQ==,type:str]
+        version: 6d094e08ab7240ea8a64ec77f7f734b7
+        created_at: '2020-10-16T17:14:45Z'
+        enc: Jq_gLtSVx6JS33jW3dZs01FZkV9MURF1AficlMRmwafIZk4abQgZYraWWyih8GWwFWza9B-QIkOHxY0gZSCBDmMjY3gVWyt901LjLb242U9lF-pdpgPGyL9P2lgmfF_Be_ZgL01XhZwRLb5L2dKRHHalHL2UUgjFduqtKEQXGYLNQ4XRB_gWRJ35dhnfvuWD5NrJVDJkt-r04LhEHHhyaCKeOQXS2rOYlr2RZp-1N1XHN3DvWL9exD1w9WhDbDP8P4oE2snqgX7KkhuJgZzkNzjMRIFaCHjWbyATgP9Qv4Vfobozyd3eQ3dCm0F7MQCCn7EqSHTol2CiVkygquf-yA
+    hc_vault: []
+    lastmodified: '2020-10-16T17:14:47Z'
+    mac: ENC[AES256_GCM,data:BfaF1ZLj2Ox/bc3EGrnxzI3IQXO5SkipBhejr8JxErBHGB5EmGXpq9zeeR5WYZbakbw3rTOvbGH6eFhzW/4unAYZAm9kiMCE3ltQZn4q+z9Y/urZEE1haBuzpdDu8RmCoxYLAOV7k9TFgq+sqzza2uytbgDB2j/68wQe9tPFWBk=,iv:qGYSTI5cG1K5HlSRYMM8RvwXvRkwug0PMTZy4A12BiI=,tag:A/4TL4Zkh+Wc2oEo/k3BIA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
-    version: 3.5.0
+    version: 3.6.1
