--- a/k8s/release/hmi/hmi-casehqemulator/values.yaml
+++ b/k8s/release/hmi/hmi-casehqemulator/values.yaml
@@ -20,7 +20,7 @@ ingress:
     - /
   tls: []
   hosts:
-  - 'hmi-casehqemulator.ss-service.core-compute-sandbox.internal'
+  - 'hmi-casehqemulator.sandbox.platform.hmcts.net'
 
 volumeMounts:
 - name: azureshare
