--- a/k8s/release/hmi/hmi-pactbroker/values.yaml
+++ b/k8s/release/hmi/hmi-pactbroker/values.yaml
@@ -20,7 +20,7 @@ service:
 #     - /
 #   tls: []
 #   hosts:
-#   - 'hmi-pact.ss-service.core-compute-sandbox.internal'
+#   - 'hmi-pact.sandbox.platform.hmcts.net'
 
 env: {}
 
