--- a/k8s/release/hmi/hmi-wiremock/values.yaml
+++ b/k8s/release/hmi/hmi-wiremock/values.yaml
@@ -21,7 +21,7 @@ ingress:
  tls: []
   #  - secretName: chart-example-tls
  hosts:
- - 'hmi-wiremock.ss-service.core-compute-sandbox.internal'
+ - 'hmi-wiremock.sandbox.platform.hmcts.net'
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
