--- a/k8s/release/hmi/hmi-pactbroker/templates/deployment.yaml
+++ b/k8s/release/hmi/hmi-pactbroker/templates/deployment.yaml
@@ -23,6 +23,9 @@ spec:
       labels:
         app.kubernetes.io/name: {{ include "hmi-pactbroker.name" . }}
         app.kubernetes.io/instance: {{ .Release.Name }}
+        {{- if .Values.aadIdentityName }}
+        aadpodidbinding: {{ .Values.aadIdentityName }}
+        {{- end }}
     spec:
       {{- $aadIdentityName := .Values.aadIdentityName }}
       volumes:
