Updating maintenance host, ITHC traefik, and secrets

--- a/k8s/environments/dev/common/maintenance/maintenance.yaml
+++ b/k8s/environments/dev/common/maintenance/maintenance.yaml
@@ -20,4 +20,4 @@ spec:
       annotations:
         kubernetes.io/ingress.class: traefik
       hosts:
-      - 'maintenance-dev.aks-ss.core-compute-dev.internal'
+      - 'maintenance.dev.platform.hmcts.net'
