--- a/k8s/environments/ithc/common/secrets/kube-slack-values.enc.yaml
+++ b/k8s/environments/ithc/common/secrets/kube-slack-values.enc.yaml
@@ -1,22 +1,23 @@
-apiVersion: ENC[AES256_GCM,data:dJA=,iv:MYgWpb9WiMnioOByhwbnudKYvz8ScDU5Q28T3ubX7KU=,tag:o7Ygp4AxVfDw/4oJuJSguA==,type:str]
+apiVersion: ENC[AES256_GCM,data:KZM=,iv:ZSecaYWiF0N3+eJ+QCZ7hyxIWVoEDGsOZxmq/IT/5Nc=,tag:EGWGEMEmW88/6c88UUGT8Q==,type:str]
 data:
-    values.yaml: ENC[AES256_GCM,data:uIyMAP/7yEjyOva7ycFAt0drzsMq7KMPC2D8HlY1LG43F/EIjREHBAeM+bvc23pQ+0jfjxBHGn+i+iI7QM5/Q5a7jdIEXT4585i4Xlf0w6H+qxXlDBWkCYlsya89iNlu0hGymD7Sf9BwrQFj0K0qJj9kwM5zRAB+Xi0/bUcBSqnLzY/w,iv:rNCPoeWwEEIdbqvqY6DdOJT7W4xipJxanSVJHnkqWw8=,tag:IM3p5SF2VardhdUYllZhfA==,type:str]
-kind: ENC[AES256_GCM,data:5X7a49NI,iv:JoMB5HhWNMM5gFHah3u9inrVJuMS6CKzt3YDmhLmaBg=,tag:MkICHEJr8QQRBeeQnGnZZg==,type:str]
+    values.yaml: ENC[AES256_GCM,data:VyTgRBFIwpZSf+a/Uw/2WmW3rTigI18ZiIS05mBA27MuLXaNJg9CHf4PLx4Gx08GXq8q95KmzcLq1JfkrJIOoOknElWi742W5Kj5WLXLUJtirAe/kNTKKjC3u8M0zpyPasDfBaDpPS9LB+tV87za6oyx//4FyANxZVLOU2scV6SvTYkK,iv:5NfEwqixAw68UpFrVJbPBsbw4Ey+q+3RnLG4TcWSkyA=,tag:7grxDP3A33/Og2qaYK7j2A==,type:str]
+kind: ENC[AES256_GCM,data:a1rBTK3j,iv:cTr3NRhFxu1YaskHBG7dSIUVYEx4Sv2gs43LQo6LsmQ=,tag:kKN0Eulz1qaVkzQpf8T/zA==,type:str]
 metadata:
     creationTimestamp: null
-    name: ENC[AES256_GCM,data:aR8PDaGxf6d9bU50AAGwpwU=,iv:bPmNB7JZgKG33K+hhxDTv5WVra5ycQ5oLC4DffG/LlE=,tag:5hUeACSZNSkAoPqT56aO5g==,type:str]
-    namespace: ENC[AES256_GCM,data:JJ9O89U=,iv:iwsPj/suGK0pJAebZlx8gL+sl0CU80yI7nJkBoFB/pQ=,tag:sZw7P0Zy7GDmqXPMfcV/nQ==,type:str]
+    name: ENC[AES256_GCM,data:rBO9UoTKV6KKaOFY0cJFsa8=,iv:v8y73PQ5H6NOSsu2RuH1TzDxIt5FbP1H+mmMotkVTvI=,tag:MSVmOoDQTx504V4asgbxeg==,type:str]
+    namespace: ENC[AES256_GCM,data:uthRf+w=,iv:PiCHRq+iBBaSaUBPwuuB6oUsjhqjgBlQMfBqp7ipvHI=,tag:6xbrpXl0dsqO6mrUWkqe6w==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv:
     -   vault_url: https://dtssharedservicesithckv.vault.azure.net
         name: sops-key
-        version: fdf512a498ef473489a9405f4a85ee22
-        created_at: '2020-09-03T14:31:07Z'
-        enc: snQKSilB8lfM2om23bMqppmtoovQ6ONV-oInzkM3QAHqqYnBVSFaux_JlPZql32-3N64fTrmKPdL5r4T6M3LaVmPo61CuHpCiop5k_t4qg7kQBAGk-6XFQctle1_CoZuo_mHHYaa1kAqUA1LKHPazHZXb5-7AuHWtiAEwWvWzPGSnXywh5wQjtgXxGrrTPf8n675gAnhgWAGtDK4MQIPD2-T8jLl9ahlPAcAZuPz7x3csCZq3bCCia131SHfngJX3tMvWjJrw3vWasA65sOjxH-tBN8yri8C3Ek9oZJNb_-i58yjT3xuaXavTFmT6OQ_J7G5BjpURuuHoLIZd0gL4w
-    lastmodified: '2020-09-03T14:31:09Z'
-    mac: ENC[AES256_GCM,data:qNkBC1Q0Dr6Z51Qy2obJ1eXBQJV0OYNgrI1Ln53f9S1Fu6O5frYb4YEItfpIC0uBVIkLROanI53VTpgJw52IOSNB0zyM15dXTmM93otXGTrOxTK911izZX4KvVothpbvdbbh4OhaupeWmzAs4kUu2YIOmoi4I+noiyKsteIFvVU=,iv:lPSI9vKLYtH0NhyaJroURfGpCfhyhOcJzc5zZ4x7t5s=,tag:KXfmncVYySsKzfhNMa0wLg==,type:str]
+        version: 96812ee192044e6daabee8d3621b456f
+        created_at: '2020-10-20T16:43:03Z'
+        enc: xs65wmI44q-LZ0o0B2N4BxGZSsy2bXhQznQGwe9D6q17nvbFWOpXCezth6b3MoIkN7ZzH-yf431Oyy_qbG6kcE9SXq-VwAXbnQhcWEbNPq4mGMxi7T02A1udtM0XyMGHhbje9AgO2Ft6htr68REYCeXcG4g-PDa4M9uaoFzQhy1Zd0WGn8C0jPIELw3iAmgWKciWgx0w6q0WUSWqbq1hK7Dik13lDk7S5NDm3-IO-ExBuJMj3CDLXrJBuq5O5AlzBdVTkfnG0DaIdZCYBY7LdPh_I5fiAGbPUv9wGU5y9W-1zXxARj76FAHDuWfNrYLYZqQP6fHTZDCYZvZ_WbA4_A
+    hc_vault: []
+    lastmodified: '2020-10-20T16:43:03Z'
+    mac: ENC[AES256_GCM,data:gj86raTcM821YEtX3sFmUhLwppCWo7RWDHvuZU0EVs17I9WN3GTJjusR2RL7QhhtRw13xipAiLXHAQc3vohmblNC36HcrIgnGinR9O7+LWhijcZh4iSsHUpagvRFLJ6XpMd5KASyhZkNeko1WmpTl/0w7QavUWLqGAqeFIzP9gY=,iv:bO3DLKQErD7CL0NImp7i1J3/DuXWkxdeUywU4PYg464=,tag:BNBSoV0jlPLdUUyrQw7urw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
-    version: 3.5.0
+    version: 3.6.1
