--- a/k8s/environments/ithc/common/secrets/kured-values.enc.yaml
+++ b/k8s/environments/ithc/common/secrets/kured-values.enc.yaml
@@ -1,22 +1,23 @@
-apiVersion: ENC[AES256_GCM,data:mg4=,iv:lf5jMTAhFGvNp+V5Pn3S8SKN1SCRH5qg0pP2Fcn7kkE=,tag:MUsmOCwy92DEu9EoVJSReQ==,type:str]
+kind: ENC[AES256_GCM,data:PNNW03xA,iv:ZBc1LGUF71xXCOXLJjJA2iGMwXw4a7vmL1ZGD9aaU24=,tag:R8xlts7xk9UPwmGu+pdVwg==,type:str]
+apiVersion: ENC[AES256_GCM,data:QH0=,iv:wtmeBAQmnNle/yAucXnh+1iXfSFKIUJFIGgs9doEDnM=,tag:iusC6XdMww9I/MftSGcwDw==,type:str]
 data:
-    values.yaml: ENC[AES256_GCM,data:v5kRn+PnmfpjBwOycEhlo0euGulcQzW4X4vVdFp8CYnXKpM5OO0xhGErrmE7/lJKZmzD5zKQ5LZz9gOPjYikhqIXMxQSORhcAYCOas4WL79SyIWZwPCngCyKwao7ap6UAkg9nAPM7clsEi0Q/chU1M8SO6D6+2J+p4yywm87kApYTSWd8AZL2Jw+cgA=,iv:wJXgvo62wjWsySxA+mLTtugOCEejB6PSfX526Y+3MO8=,tag:hgIVVZ63aynuVY5Zd1Vngg==,type:str]
-kind: ENC[AES256_GCM,data:ODgurxIz,iv:eF5s+J5JcB7RfEiHcQsO9YiTw2eDCFZvR25iYE2nGfk=,tag:B/IbpJoVf+7zPiQURg5z3w==,type:str]
+    values.yaml: ENC[AES256_GCM,data:Zdc+DTcw1VQ1vlowDRm63InhJmFa7aWztP+ZsATuECB45aZHOn9KtfhhMv/yCDD0J/AHaw4+mXKcDAPr3s8XdmW6JZ84ns7gShLhLzoyICJ4Xl3a4IWC7ftgX5O/4BlXL5xLBzG7IAWkMeM2qtdtZJM3xaTcEuZmY53vaE6/1cMWhUPQpKJ5Ol7Fmqo=,iv:dw+F6QtISNbQ35keWDUS6UJQAGCW3AjrMFbLso8rggI=,tag:wXoJfyNuT8Ttt4iVa6LxFw==,type:str]
+type: ENC[AES256_GCM,data:rdHw8C7k,iv:cXpPEvh0QnbaQf2oET86OJvcaxvYCSLrxwmOu9PKGkU=,tag:y1nlf+Pgpt/feVavrZIWkg==,type:str]
 metadata:
-    creationTimestamp: null
-    name: ENC[AES256_GCM,data:lem9VWclrpj32YnG,iv:UcTvwOl1BKKicNasXPnk9C4Db/DTti5+6x1qh0J5Q5U=,tag:Mdo2X1aamnnbiBRIPgG75w==,type:str]
-    namespace: ENC[AES256_GCM,data:Fn2euQE=,iv:Pl8pK60sgdWVmAwpKO/HwCkSQUzuuMnsa2si9neEGuk=,tag:pZc6Nv7NPGrQMcduPLI7vw==,type:str]
+    name: ENC[AES256_GCM,data:LSkEJV+JKu4xAgC/,iv:4DqpcVgJS0HxBH42soD+Xq20nQnak8JdQF8qDHSAkcU=,tag:gYg2wZwBe1Ow0QREf8AoSA==,type:str]
+    namespace: ENC[AES256_GCM,data:129JqYw=,iv:/T/5ZbeVBrH5CnE00sGakZDi9Sx6dVPYdmnOgV2beOc=,tag:32+gvbttbEpSt6qTR5W2Gw==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv:
     -   vault_url: https://dtssharedservicesithckv.vault.azure.net
         name: sops-key
-        version: fdf512a498ef473489a9405f4a85ee22
-        created_at: '2020-09-03T14:34:02Z'
-        enc: mWPYjXWTatr-yYzXwOAR3yMFJJZnSrRQ5YhloVe1YiVW9rQQZi9S0gA4ol5s2Hf9I0HqaMeUnKP3dSSSeGV3CREYOtW4WV7g1JRqjzXLqoKipeztsnaiyOMXL5BCIArNc9F6vRYtI24e5MRj3pGMR1ZMGSUDyjoBFRvPNPFnUileg57IgIT2HSVl78i4GqyPNVSD7NxYTagj8aEmw6ThVmrXNzt1PWFhnxy6WEycWZZhwCEV52MdMn7c-GkK4D1CnartrCIYfhbpQWyWG9EAQ5pbCkzuH2COTu6CuxJ7Oea6SdOSgqLdV3olBEuB2yNtxaKW4-_URj-wHm8ufgg0rA
-    lastmodified: '2020-09-03T14:34:04Z'
-    mac: ENC[AES256_GCM,data:2Tju+25Mfw72V+B55Q90MnRT/L/NcT7YbIkZXbodgzKenT6OLE1R6XFRAMbMBB7t6pHdpKT1W+BMtfPJpglYHDfaeUiUXrf6ppaM4pezUr6vNtrWC1J/YreDjrs/MPom5ZC8uJKtE2+tFH6mvErhKdQsroiREUjbAadMZEaxjCc=,iv:A1aOWgVjU5X7Bv4AmfX+KbN5oZeuc0H4pCWZ34s1lQg=,tag:g/f+7rAYW6WdLt7Y14vlRQ==,type:str]
+        version: 96812ee192044e6daabee8d3621b456f
+        created_at: '2020-10-20T16:43:01Z'
+        enc: T4Vr02yNTSHgC5IVG2r7e67EaIn10lXhFAIVhvYvm6qKDyhp5l5emUjHeGGqfwfNK7Jr725QuNVhWnuQcTtrH2mvhgnlIVjOOM1OXG1Q04Hln8R90-MtRRJeUlON7LZ-tzrmxLfV807hAnx0tU9vN4U0ZdLs3QZTitOtkzwNYIiWdMj8FSrtJIIu74SdOPZbfyqB5orDvUPlhp05Cuss-2pBz6CR1_alCQ7SPXD_OE1OKxxpviKYsXtZXTB8CCoLPQ7j3d7rbR1rZgOQ72Gy-pLwtvtOKn4JgnSYai2xmRi1MmOtRYaKhK6wsvX43TJU5_v_wp0mm6ecJehzAoslFg
+    hc_vault: []
+    lastmodified: '2020-10-20T16:43:02Z'
+    mac: ENC[AES256_GCM,data:9LmckoSqmiEqOl7s3evKvaOu+TIJUzb1EnOevPTsT63aUqSCTh57KYgeZEkCQjKlT4vewoDsRC0DLTJdyy+O3jSp4UhsdW9Jrr3xljlCjkwp0OfDqeyddid/On0gp6m3XijRzw/yCrIypWyqtQ6RodgeO9hnr8wzXIFTvtTnKOo=,iv:1GFb0T5CpSUcw2JeI9lq24lrK9wgzr6YdS2EeeYBhzQ=,tag:u94Z+N47LKx2exXqGcKeOg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
-    version: 3.5.0
+    version: 3.6.1
