--- a/k8s/environments/sbox/common/maintenance/maintenance.yaml
+++ b/k8s/environments/sbox/common/maintenance/maintenance.yaml
@@ -20,4 +20,4 @@ spec:
       annotations:
         kubernetes.io/ingress.class: traefik
       hosts:
-      - 'maintenance.ss-service.core-compute-sandbox.internal'
+      - 'maintenance.sandbox.platform.hmcts.net'
