--- a/k8s/release/admin/traefik/patches/ithc/cluster-00/traefik.yaml
+++ b/k8s/release/admin/traefik/patches/ithc/cluster-00/traefik.yaml
@@ -7,15 +7,12 @@ spec:
   values:
     loadBalancerIP: 10.143.15.250
     dashboard:
-      domain: traefik00.ss-service.core-compute-ithc.internal
+      domain: traefik-ss-00.ithc.platform.hmcts.net
     accessLogs:
       enabled: true
     autoscaling:
       minReplicas: 1
       maxReplicas: 2
-    ssl:
-      generateTLS: true
-      defaultCN: "*.ss-service.core-compute-ithc.internal"
     metrics:
       prometheus:
         enabled: true
