--- a/k8s/release/admin/traefik/patches/stg/cluster-00/traefik.yaml
+++ b/k8s/release/admin/traefik/patches/stg/cluster-00/traefik.yaml
@@ -5,9 +5,9 @@ metadata:
   namespace: admin
 spec:
   values:
-    loadBalancerIP: 10.141.15.250
+    loadBalancerIP: 10.142.15.250
     dashboard:
-      domain: traefik-ss-00.test.platform.hmcts.net
+      domain: traefik-ss-00.staging.platform.hmcts.net
     accessLogs:
       enabled: true
     autoscaling:
