set sftp config on stg

--- a/k8s/stg/releases/mi/mi-extraction-service.yaml
+++ b/k8s/stg/releases/mi/mi-extraction-service.yaml
@@ -37,6 +37,10 @@ spec:
       environment:
         APPINSIGHTS_INSTRUMENTATIONKEY: "482eb1b8-a656-41e6-b2e8-8351d7986b2c"
         MI_CLIENT_ID: "88d54b96-2be6-4fb5-b966-7d98111152d8"
+        SFTP_ENABLED: false
+        SFTP_REMOTE_HOST: staging.hmcts.cloudgateway.co.uk
+        SFTP_REMOTE_PORT: 22
+        SFTP_REMOTE_FOLDER: files/mi-platform-export/
       smoketests:
         image: ssprivatestg.azurecr.io/mi-extraction-service:stg-00ffd89
         enabled: true
@@ -52,7 +56,7 @@ spec:
         environment:
           APPINSIGHTS_INSTRUMENTATIONKEY: "482eb1b8-a656-41e6-b2e8-8351d7986b2c"
           MI_CLIENT_ID: "88d54b96-2be6-4fb5-b966-7d98111152d8"
-          SFTP_ENABLED: true
+          SFTP_ENABLED: false
           SFTP_REMOTE_HOST: staging.hmcts.cloudgateway.co.uk
           SFTP_REMOTE_PORT: 22
           SFTP_REMOTE_FOLDER: files/mi-platform-export/
