Enable force check

--- a/k8s/stg/releases/mi/mi-extraction-service.yaml
+++ b/k8s/stg/releases/mi/mi-extraction-service.yaml
@@ -38,6 +38,7 @@ spec:
         APPINSIGHTS_INSTRUMENTATIONKEY: "482eb1b8-a656-41e6-b2e8-8351d7986b2c"
         MI_CLIENT_ID: "88d54b96-2be6-4fb5-b966-7d98111152d8"
         SFTP_ENABLED: false
+        SFTP_FORCECHECK: true
         SFTP_REMOTE_HOST: staging.hmcts.cloudgateway.co.uk
         SFTP_REMOTE_PORT: 22
         SFTP_REMOTE_FOLDER: files/mi-platform-export/
