Use IP address for SFTP server config

--- a/k8s/prod/releases/mi/mi-extraction-service.yaml
+++ b/k8s/prod/releases/mi/mi-extraction-service.yaml
@@ -40,7 +40,7 @@ spec:
         GOV_UK_NOTIFY_BLOB_URL_TEMPLATE_ID: 393b8dd5-db7a-4cd7-b7b8-931876f3dea6
         SFTP_ENABLED: false
         SFTP_FORCECHECK: true
-        SFTP_REMOTE_HOST: staging.hmcts.cloudgateway.co.uk
+        SFTP_REMOTE_HOST: 10.24.254.130
         SFTP_REMOTE_PORT: 22
         SFTP_REMOTE_FOLDER: files/mi-platform-export/
       smoketests:
