--- a/k8s/release/az-devops-agent/templates/deployment.yaml
+++ b/k8s/release/az-devops-agent/templates/deployment.yaml
@@ -1,5 +1,5 @@
 apiVersion: apps/v1
-kind: StatefulSet
+kind: Deployment
 metadata:
   name: {{ .Chart.Name }}
   namespace: {{ .Release.Namespace }}
@@ -8,7 +8,6 @@ metadata:
     version: {{ .Chart.Version }}
 spec:
   replicas: {{ .Values.replicas }}
-  serviceName: {{ .Chart.Name }}
   selector:
     matchLabels:
       app: {{ .Chart.Name }}
@@ -41,12 +40,5 @@ spec:
 {{ end }}
         resources:
             {{- toYaml .Values.resources | nindent 12 }}
-{{ if .Values.extraContainers }}
-{{ toYaml .Values.extraContainers | indent 6 }}
-{{ end }}
       volumes:
 {{ toYaml .Values.volumes | indent 8 }}
-{{ if .Values.image.imagePullSecret }}
-      imagePullSecrets:
-        - name: {{ .Values.image.imagePullSecret }}
-{{ end }}
