--- a/k8s/environments/dev/common/hmi/az-devops-agent.yaml
+++ b/k8s/environments/dev/common/hmi/az-devops-agent.yaml
@@ -19,5 +19,5 @@ spec:
       tag: "v0.1"
     env:
       AZP_URL: "https://dev.azure.com/hmcts"
-      AZP_POOL: "hmi-test"
+      AZP_POOL: "hmi-dev"
       AZP_WORK: "_work"
