--- a/k8s/environments/sbox/common/hmi/az-devops-agent.yaml
+++ b/k8s/environments/sbox/common/hmi/az-devops-agent.yaml
@@ -15,9 +15,9 @@ spec:
     ref: master
   values:
     image:
-      repository: "ssprivatesbox.azurecr.io/hmi/azure-devops-agent"
+      repository: "sdshmctspublic.azurecr.io/hmi/azure-devops-agent"
       tag: "v0.1"
     env:
       AZP_URL: "https://dev.azure.com/hmcts"
-      AZP_POOL: "hmi-pool"
+      AZP_POOL: "hmi-sbox"
       AZP_WORK: "_work"
