Updated stg keyvault for mi ingest historical

--- a/k8s/stg/releases/mi/mi-integration-service-historical-notify.yaml
+++ b/k8s/stg/releases/mi/mi-integration-service-historical-notify.yaml
@@ -34,7 +34,9 @@ spec:
       keyVaultsUsepodidentity: false
       keyVaults:
         "mi-vault":
+          excludeEnvironmentSuffix: false
           resourceGroup: mi-{{ .Values.global.environment }}-rg
+          usepodidentity: false
           secrets:
             - mi-historical-storage-connection-string
       smoketests:
