added volume spec values to base manifest

--- a/k8s/namespaces/azure-devops/azure-devops-agent/azure-devops-agent.yaml
+++ b/k8s/namespaces/azure-devops/azure-devops-agent/azure-devops-agent.yaml
@@ -20,3 +20,11 @@ spec:
       AZP_URL: "https://dev.azure.com/hmcts"
       AZP_POOL: "hmcts-ss-sandbox"
       AZP_WORK: "_work"
+    volumeMounts:
+    - name: docker-socket
+      mountPath: /var/run/docker.sock
+      readOnly: false
+    volumes:
+    - name: docker-socket
+      hostPath:
+        path: /var/run/docker.sock
