correct dev vars

--- a/k8s/environments/dev/common/hmi/hmi-casehqemulator.yaml
+++ b/k8s/environments/dev/common/hmi/hmi-casehqemulator.yaml
@@ -27,7 +27,7 @@ spec:
         - /
       tls: []
       hosts:
-      - 'hmi-casehqemulator.sandbox.platform.hmcts.net'
+      - 'hmi-casehqemulator.preview.platform.hmcts.net'
     readinessProbe:
       enabled: false
     #   path: "/"
