--- a/k8s/environments/dev/common/hmi/hmi-pactbroker.yaml
+++ b/k8s/environments/dev/common/hmi/hmi-pactbroker.yaml
@@ -27,7 +27,7 @@ spec:
         - /
       tls: []
       hosts:
-      - 'hmi-pact.sandbox.platform.hmcts.net'
+      - 'hmi-pact.preview.platform.hmcts.net'
     aadIdentityName: "flux-dev-mi-sops"
     aadResourceId: /subscriptions/867a878b-cb68-4de5-9741-361ac9e178b6/resourceGroups/genesis-rg/providers/Microsoft.ManagedIdentity/userAssignedIdentities/flux-dev-mi-sops
     aadClientId: 52ec38e7-1e5a-42c2-8ec1-f8d467568fd8
