--- a/k8s/environments/dev/common/hmi/hmi-wiremock.yaml
+++ b/k8s/environments/dev/common/hmi/hmi-wiremock.yaml
@@ -27,7 +27,7 @@ spec:
         - /
       tls: []
       hosts:
-      - 'hmi-wiremock.sandbox.platform.hmcts.net'
+      - 'hmi-wiremock.preview.platform.hmcts.net'
     readinessProbe:
       enabled: false
     #   path: "/"
